@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam shadowing false
skinparam class {
    BackgroundColor White
    BorderColor #263238
    ArrowColor #263238
}

package "Customer Service" #GhostWhite {
    package "Adapter" as CustAdapter {
        class CustomerController {
            + createCustomer(CreateRequest): ResponseEntity<WrapperApiResponse>
        }
        
        interface ConstructionService <<FeignClient>> {
            + isExistingRoadmap(String): Boolean
            + checkExistence(String, String): Boolean
        }
        
        interface DeviceService <<FeignClient>> {
            + checkExistenceOfWaterPrice(String): Boolean
            + checkExistenceOfWaterMeter(String): Boolean
            + getWaterPriceById(String): WrapperApiResponse
        }
    }

    package "Application" as CustApp {
        interface CustomerService {
            + createCustomer(CreateRequest): CustomerResponse
        }
        
        class CustomerServiceImpl {
            - customerRepository: CustomerRepository
            - constructionService: ConstructionService
            - deviceService: DeviceService
            + createCustomer(CreateRequest): CustomerResponse
            - setProperties2(Customer, String, String, String, String): void
            - mapToResponse(Customer): CustomerResponse
        }
    }

    package "Infrastructure" as CustInfra {
        interface CustomerRepository {
            + existsByFormCodeAndFormNumber(String, String): boolean
            + save(Customer): Customer
        }
    }

    package "Domain" as CustDomain {
        class Customer {
            - customerId: String
            - name: String
            - email: String
            - phoneNumber: String
            - type: CustomerType
            - address: String
            - roadmapId: String
            - waterPriceId: String
            - waterMeterId: String
            - formCode: String
            - formNumber: String
        }
    }
}

package "Construction Service" #AliceBlue {
    package "Adapter" as ConstAdapter {
        class RoadmapController {
            + isExistingRoadmap(String): boolean
        }
        class InstallationFormController {
            + isExisting(String, String): boolean
        }
    }
}

package "Device Service" #Ivory {
    package "Adapter" as DeviceAdapter {
        class WaterPriceController {
            + checkExistence(String): boolean
            + getById(String): ResponseEntity
        }
        class WaterMeterController {
            + checkExistence(String): boolean
        }
    }
}

package "DTOs" #Ivory {
    class CreateRequest <<Record>> {
        + name: String
        + email: String
        + roadmapId: String
        + formCode: String
        + formNumber: String
        + waterPriceId: String
        + waterMeterId: String
    }
}

' Relationships
CustomerController o-- CustomerService
CustomerService <|.. CustomerServiceImpl
CustomerServiceImpl o-- CustomerRepository
CustomerServiceImpl o-- ConstructionService
CustomerServiceImpl o-- DeviceService

CustomerServiceImpl ..> Customer : creates

ConstructionService ..> RoadmapController : calls (Feign)
ConstructionService ..> InstallationFormController : calls (Feign)
DeviceService ..> WaterPriceController : calls (Feign)
DeviceService ..> WaterMeterController : calls (Feign)

CustomerController ..> CreateRequest : uses
CustomerServiceImpl ..> CreateRequest : uses

@enduml
